tigergraph-server/3.6/user-access/access-control-model.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model)[Next](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [TigerGraph Server](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  *     * [TigerGraph Server](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
      * [Internal Architecture](https://docs.tigergraph.com/tigergraph-server/3.6/intro/internal-architecture)
      * [Multigraph Overview](https://docs.tigergraph.com/tigergraph-server/3.6/intro/multigraph-overview)
      * [Transaction Processing and ACID Support](https://docs.tigergraph.com/tigergraph-server/3.6/intro/transaction-and-acid)
      * [Continuous Availability Overview](https://docs.tigergraph.com/tigergraph-server/3.6/intro/continuous-availability-overview)
      * [Comparing TigerGraph Editions](https://docs.tigergraph.com/tigergraph-server/3.6/intro/comparison-of-editions)
      * [Release and Patch Process](https://docs.tigergraph.com/tigergraph-server/3.6/intro/release-process)
  *     * Getting Started
      * [Get Started with Docker](https://docs.tigergraph.com/tigergraph-server/3.6/getting-started/docker)
      * Get Started with Cloud Images
        * [Get Started on AWS](https://docs.tigergraph.com/tigergraph-server/3.6/getting-started/cloud-images/aws)
        * [Get Started on Microsoft Azure](https://docs.tigergraph.com/tigergraph-server/3.6/getting-started/cloud-images/azure)
        * [Get Started on Google Cloud](https://docs.tigergraph.com/tigergraph-server/3.6/getting-started/cloud-images/gcp)
      * [Install TigerGraph on Linux](https://docs.tigergraph.com/tigergraph-server/3.6/getting-started/linux)
      * [Get Started with Virtual Box](https://docs.tigergraph.com/tigergraph-server/3.6/getting-started/virtual-box)
      * Learn GSQL
        * [GSQL 101](https://docs.tigergraph.com/gsql-ref/3.6/tutorials/gsql-101/)
        * [Pattern Matching Tutorial](https://docs.tigergraph.com/gsql-ref/3.6/tutorials/pattern-matching/)
  *     * Installation
      * [Hardware and Software Requirements](https://docs.tigergraph.com/tigergraph-server/3.6/installation/hw-and-sw-requirements)
      * [Installation](https://docs.tigergraph.com/tigergraph-server/3.6/installation/install)
      * [Upgrade](https://docs.tigergraph.com/tigergraph-server/3.6/installation/upgrade)
      * [Uninstallation](https://docs.tigergraph.com/tigergraph-server/3.6/installation/uninstallation)
      * [Advanced License Issues](https://docs.tigergraph.com/tigergraph-server/3.6/installation/license)
  *     * [Kubernetes (Preview)](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/)
      * [Quickstart with EKS](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/quickstart-with-eks)
      * [Quickstart with AKS](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/quickstart-with-aks)
      * [Quickstart with GKE](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/quickstart-with-gke)
      * [Kubernetes Operator](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/k8s-operator/)
        * [Kubernetes (Preview)](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/k8s-operator/installation)
        * [Cluster Operations](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/k8s-operator/cluster-operations)
        * [Connecting to a Cluster](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/k8s-operator/connect-to-cluster)
        * [Uninstallation](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/k8s-operator/uninstallation)
  *     * [The GSQL Shell](https://docs.tigergraph.com/tigergraph-server/3.6/gsql-shell/)
      * [GSQL Shell Sessions](https://docs.tigergraph.com/tigergraph-server/3.6/gsql-shell/gsql-sessions)
      * [Using a Remote GSQL Client](https://docs.tigergraph.com/tigergraph-server/3.6/gsql-shell/using-a-remote-gsql-client)
  *     * [User Access Management](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/)
      * [Enabling User Authentication](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/enabling-user-authentication)
      * [Managing Credentials](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/managing-credentials)
      * [Access Control Model in TigerGraph](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model)
      * [Role Management](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management)
      * [User Management](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/user-management)
      * [ACL Management](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/acl-management)
      * [Vertex-Level Access Control (Deprecated)](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac)
      * [Single Sign-On](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/sso)
      * [Lightweight Directory Access Protocol (LDAP)](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/ldap)
  *     * High Availability
      * [High Availability Cluster Configuration](https://docs.tigergraph.com/tigergraph-server/3.6/ha/ha-cluster)
      * [High Availability Support for GSQL Server](https://docs.tigergraph.com/tigergraph-server/3.6/ha/ha-for-gsql-server)
      * [High Availability Support for Application Server](https://docs.tigergraph.com/tigergraph-server/3.6/ha/ha-for-application-server)
      * [Compute-on-demand Elastic Cluster](https://docs.tigergraph.com/tigergraph-server/3.6/ha/elastic-cluster)
      * [Cluster Commands](https://docs.tigergraph.com/tigergraph-server/3.6/ha/cluster-commands)
      * [Removal of Failed Nodes](https://docs.tigergraph.com/tigergraph-server/3.6/ha/remove-failed-node)
  *     * [Cluster Resizing](https://docs.tigergraph.com/tigergraph-server/3.6/cluster-resizing/)
      * [Cluster Expansion](https://docs.tigergraph.com/tigergraph-server/3.6/cluster-resizing/expand-a-cluster)
      * [Cluster Shrinking](https://docs.tigergraph.com/tigergraph-server/3.6/cluster-resizing/shrink-a-cluster)
      * [Cluster Repartition](https://docs.tigergraph.com/tigergraph-server/3.6/cluster-resizing/repartition-a-cluster)
  *     * [Cross-Region Replication](https://docs.tigergraph.com/tigergraph-server/3.6/crr/)
      * [Set Up Cross-Region Replication](https://docs.tigergraph.com/tigergraph-server/3.6/crr/set-up-crr)
      * [Fail over to the DR cluster](https://docs.tigergraph.com/tigergraph-server/3.6/crr/fail-over)
      * [Troubleshooting for Cross-Region Replication](https://docs.tigergraph.com/tigergraph-server/3.6/crr/troubleshooting)
      * [FAQ](https://docs.tigergraph.com/tigergraph-server/3.6/crr/faq)
  *     * [Database Definition](https://docs.tigergraph.com/tigergraph-server/3.6/data-definition/README)
  *     * [Data Loading](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/)
      * [AWS S3 Loader](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/s3-loader-user-guide)
      * [Kafka Loader](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/kafka-loader/)
        * [Data Loading with Kafka Loader](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/kafka-loader/load-data)
        * [Kafka Data Source Management](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/kafka-loader/manage-data-source)
        * [Kafka Loader Loading Job Management](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/kafka-loader/manage-loading-jobs)
        * [SSL/SASL Authentication for Kafka Loader](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/kafka-loader/kafka-ssl-sasl)
      * [Spark Connection Via JDBC Driver](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/spark-connection-via-jdbc-driver)
      * [Data Streaming Connector](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/data-streaming-connector)
  *     * [Querying](https://docs.tigergraph.com/tigergraph-server/3.6/data-querying/README)
  *     * [System Management](https://docs.tigergraph.com/tigergraph-server/3.6/system-management/management-with-gadmin)
      * [Memory management](https://docs.tigergraph.com/tigergraph-server/3.6/system-management/memory-management)
      * [Manage TigerGraph services](https://docs.tigergraph.com/tigergraph-server/3.6/system-management/manage-services)
      * [Command Glossary](https://docs.tigergraph.com/tigergraph-server/3.6/system-management/management-commands)
  *     * [Security](https://docs.tigergraph.com/tigergraph-server/3.6/security/)
      * [Encrypting Connections](https://docs.tigergraph.com/tigergraph-server/3.6/security/encrypting-connections)
      * [Encrypting Data At Rest](https://docs.tigergraph.com/tigergraph-server/3.6/security/encrypting-data-at-rest)
      * [File Output Policy](https://docs.tigergraph.com/tigergraph-server/3.6/security/file-output-policy)
  *     * [Database Import/Export](https://docs.tigergraph.com/tigergraph-server/3.6/import-export/database-import-export)
  *     * [Backup and Restore](https://docs.tigergraph.com/tigergraph-server/3.6/backup-and-restore/)
  *     * [REST API Reference](https://docs.tigergraph.com/tigergraph-server/3.6/API/)
      * [Authentication](https://docs.tigergraph.com/tigergraph-server/3.6/API/authentication)
      * [Built-in Endpoints](https://docs.tigergraph.com/tigergraph-server/3.6/API/built-in-endpoints)
      * [Built-in Endpoints JSON Catalog](https://docs.tigergraph.com/tigergraph-server/3.6/API/json-catalog)
  *     * Troubleshooting
      * [Knowledge base and FAQs](https://kb.tigergraph.com/)
      * [System Administration FAQs](https://docs.tigergraph.com/tigergraph-server/3.6/troubleshooting/system-administration-faqs)
      * [Log files](https://docs.tigergraph.com/tigergraph-server/3.6/troubleshooting/log-files)
        * [Set up Log Viewing with Elasticsearch, Kibana and Filebeat](https://docs.tigergraph.com/tigergraph-server/3.6/troubleshooting/elk-filebeat)
      * [Troubleshooting Guide](https://docs.tigergraph.com/tigergraph-server/3.6/troubleshooting/troubleshooting-guide)
  *     * [Release Notes](https://docs.tigergraph.com/tigergraph-server/3.6/release-notes/)
  *     * [Patents and Third Party Software](https://docs.tigergraph.com/tigergraph-server/3.6/legal/patents-and-third-party-software)
  *     * References
      * [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/3.6/reference/configuration-parameters)
      * [Return codes](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes)
      * [List of Privileges](https://docs.tigergraph.com/tigergraph-server/3.6/reference/list-of-privileges)
      * [List of Ports](https://docs.tigergraph.com/tigergraph-server/3.6/reference/ports)
      * [Glossary](https://docs.tigergraph.com/tigergraph-server/3.6/reference/glossary)


TigerGraph DB 3.6
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [TigerGraph Server 3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [User Access Management](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/)
  * [Access Control Model in TigerGraph](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model)


[Edit this Page](https://github.com/tigergraph/server-docs/edit/3.6/modules/user-access/pages/access-control-model.adoc)
### Contents
  * [Role-based access control](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_role_based_access_control)
  * [Privileges](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_privileges)
  * [Global vs local privileges](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_global_vs_local_privileges)
  * [Roles](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_roles)
  * [Global vs local roles](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_global_vs_local_roles)
  * [Built-in roles](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_built_in_roles)
  * [User-defined roles](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_user_defined_roles)
  * [Access control lists](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_access_control_lists)
  * [ACL status](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_acl_entry_status)
  * [Query owner](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_query_owner)
  * [ACL password](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_acl_password)
  * [Examples](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_acl_examples)
  * [How permissions are evaluated](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_how_permissions_are_evaluated)
  * [Importing and exporting](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_importing_and_exporting)


# Access Control Model in TigerGraph
### Contents
  * [Role-based access control](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_role_based_access_control)
  * [Privileges](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_privileges)
  * [Global vs local privileges](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_global_vs_local_privileges)
  * [Roles](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_roles)
  * [Global vs local roles](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_global_vs_local_roles)
  * [Built-in roles](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_built_in_roles)
  * [User-defined roles](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_user_defined_roles)
  * [Access control lists](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_access_control_lists)
  * [ACL status](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_acl_entry_status)
  * [Query owner](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_query_owner)
  * [ACL password](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_acl_password)
  * [Examples](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_acl_examples)
  * [How permissions are evaluated](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_how_permissions_are_evaluated)
  * [Importing and exporting](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_importing_and_exporting)


TigerGraph supports both role-based access control (RBAC) and access control lists (ACL):
  * RBAC lets you grant access to different actions on **all** of a certain type of objects on a graph or a type, such as allowing a role to read data on all vertices of a specified type.
  * ACLs are only relevant for governing access to [queries](https://docs.tigergraph.com/gsql-ref/4.2/querying/query-operations), and let you grant access to specific queries.


## [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_role_based_access_control)Role-based access control
TigerGraph uses role-based access control (RBAC) to manage authorization. On every graph, privileges to perform actions are assigned to roles, and roles are granted to users. Outside the permissions granted by their roles, a user has no access to the system.
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_privileges)Privileges
A privilege is permission to perform an action in a given scope. When a privilege is assigned to a role, it allows users with the role to perform the specified action in the specified scope. For example, the privilege `READ_SCHEMA` on graph `Social` gives a user read permission to the schema of the graph `Social`. This allows the user to run commands such as `ls` and `SHOW VERTEX` on the graph `Social`.
To view a complete list of privileges available in TigerGraph and the commands they enable a user to run, see [List of Privileges](https://docs.tigergraph.com/tigergraph-server/3.6/reference/list-of-privileges).
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_global_vs_local_privileges)Global vs local privileges
The scope of a privilege can be global or local. Global privileges apply to all graphs and global objects. Local privileges only apply on the graph they belong to.
For example, a role with `WRITE_QUERY` on graph `Social` can only create queries on graph `social`, but not on other graphs. In contrast, a role with `WRITE_QUERY` on the global scope can create queries on all graphs.
Local roles can only be granted local privileges, while global roles can be granted both local and global privileges.
#### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_global_only_privileges)Global-only privileges
Some privileges can only be global by nature. For example, since users are global objects, any user-related privileges are global only. To see which privileges are global-only, see [List of Privileges](https://docs.tigergraph.com/tigergraph-server/3.6/reference/list-of-privileges).
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_roles)Roles
A role is a collection of privileges that are assigned to users to grant them permission to perform actions on specific resources.
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_global_vs_local_roles)Global vs local roles
Roles can be global or local. Local roles can only be granted local privileges, while global roles can be granted both local and global privileges.
For example, if a user creates a role `manager` on the graph `Social`:
```
GSQL > CREATE ROLE manager ON GRAPH Social
Successfully created roles: [manager].
text![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

This role can only be granted privileges on the graph `Social`. It cannot be granted global privileges.
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_built_in_roles)Built-in roles
GSQL offers five built-in local roles and two built-in global roles. The built-in roles cannot be dropped. The following table summarizes the built-in roles and their corresponding set of privileges:
**Name** | **Global or Local** | **Privilege List**  
---|---|---  
`observer` | Local | `READ_SCHEMA`, `READ_LOADINGJOB`,`READ_QUERY`  
`queryreader` | Local | `READ_SCHEMA`, `READ_LOADINGJOB`,`READ_QUERY`, `EXECUTE_LOADINGJOB`, `READ_DATA`  
`querywriter` | Local | `READ_SCHEMA`, `READ_LOADINGJOB`,`READ_QUERY`, `EXECUTE_LOADINGJOB`, `READ_DATA`, `WRITE_QUERY, WRITE_DATA`  
`designer` | Local | `READ_SCHEMA`, `READ_LOADINGJOB`,`READ_QUERY`, `EXECUTE_LOADINGJOB`, `READ_DATA`, `WRITE_QUERY, WRITE_DATA`, `WRITE_SCHEMA`, `WRITE_LOADINGJOB`, `ACCESS_TAG`  
`admin` | Local | `READ_SCHEMA`, `READ_LOADINGJOB`,`READ_QUERY`, `EXECUTE_LOADINGJOB`, `READ_DATA`, `WRITE_QUERY, WRITE_DATA`, `WRITE_SCHEMA`, `WRITE_LOADINGJOB`, `ACCESS_TAG` `WRITE_ROLE`, `WRITE_DATASOURCE`, `READ_ROLE`, `READ_USER`, `READ_PROXYGROUP`  
`globaldesigner` | Global | Designer’s privileges on the global scope, `DROP_GRAPH` for graphs created by the same user  
`superuser` | Global | All supported RBAC privileges  
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_user_defined_roles)User-defined roles
Users can define roles with their own list of privileges they want to grant to the role. To learn how to manage user-defined roles and privileges for the roles, see [Role Management](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management).
## [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_access_control_lists)Access control lists
ACLs give you the ability to apply finer-grained access control to a GSQL query by specifying who can read or execute the query. ACLs are bound to queries.
Each query has two ACLs - a read list and an execute list - for read privilege and execute (run) privilege on a given query, respectively. Each list consists of a set of roles. Users with roles on the ACLs of a query have the permission to either read or execute the query.
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_acl_entry_status)ACL status
ACLs of a query have three statuses: 

Unspecified
    
Default status. When an ACL is unspecified, RBAC governs the access for that privilege. 

Specified Roles
    
Only the users with specified roles have the ACL privilege. Any roles (local/global, built-in/user-defined) can be added to an ACL. 

Nobody
    
No one, not even [the owner](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_query_owner) of the query, can access the query, even with the corresponding RBAC privileges.
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_query_owner)Query owner
Every query has one and only one owner. Only the owner of a query can:
  * run ACL management commands to modify the ACLs of query.
  * run `CREATE OR REPLACE` to update a query. When the query owner runs `CREATE OR REPLACE` to update a query, the ACLs on the query remains unchanged.


When a query is created, the creator of the query is assigned to be the owner automatically. When a user is the owner of a query, the user cannot be dropped unless the query is dropped or if the owner of the query is changed.
When you upgrade from a version prior to 3.4, the old queries have no owner. Users with `WRITE_ROLE` privilege on the graph or on the global scope can assign an owner to a query without owners.   
---  
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_acl_password)ACL password
Users have the option of [setting an ACL password](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/acl-management#_set_acl_password). When a user has an ACL password, operations that modify ACL privileges of queries owned by that user require their ACL password. These operations include:
  * Changing the owner of a query
  * Modifying the ACL privileges on a query


### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_acl_examples)Examples
#### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_using_nobody_acl_status_to_hide_query_from_everyone)Using `NOBODY` ACL status to hide query from everyone
In the following example, `user1` protects their query `q1` from being seen by anyone, including users with the `superuser` roles, by setting the status of the `READ` list of their query’s ACL to `NOBODY`.
Even though no one can see the content of the query, but since the `EXECUTE` entry is unspecified, users with sufficient RBAC privileges can still execute the query. This allows `user1` to protect the content of a sensitive query, but still allow people to run it.
The following GSQL command are performed by `user1`:
```
GSQL > GRANT ACL PRIVILEGE READ ON QUERY q1 TO NOBODY **(1)**
[WARNING] The READ privileges on the query q1 are denied for any user.
Successfully granted READ on query q1 in the graph ldbc_snb to roles: <NOBODY>.
GSQL > SHOW ACL PRIVILEGE ON QUERY q1 **(2)**
Query: "q1"
  - Owner:  user1
  - READ:  <Nobody> **(2)**
  - EXECUTE: <Unspecified>
GSQL > SHOW QUERY q1
CREATE QUERY q1 () {
 /******* Query Content is Hidden. Require ACL privilege READ *******/ **(3)**
}
GSQL > ALTER ACL PASSWORD SET XXXXXX **(4)**
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

**1** | This command forbids anyone to read the query, even the owner. See [ACL status: `NOBODY`](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_acl_entry_status).  
---|---  
**2** | Use the `SHOW ACL PRIVILEGE ON QUERY` command to verify the `NOBODY` status of the `READ` list.  
**3** | Query content cannot be seen by any user, including the owner.  
**4** | If user `user1` does not have an [ACL password](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_acl_password), it is important to set one. Otherwise, other users with the `WRITE_ROLE` privilege can [change the owner of the query](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/acl-management#_change_query_owner).  
#### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_granting_and_revoking_execute_privilege)Granting and revoking `EXECUTE` Privilege
In this example, the superuser `tigergraph` grants and revokes `EXECUTE` privilege for query `q1` for roles `role1` and `admin`.
User `user1` is first granted the privilege while `user2` is not, then the privilege is revoked from all users.
```
GSQL > CREATE ROLE role1 ON GRAPH G1
Successfully created local roles on graph 'G1': [role1].
GSQL > GRANT ACL PRIVILEGE EXECUTE ON QUERY q1 TO role1, admin SECURED BY "example_password"
Successfully granted EXECUTE on query q1 in the graph ldbc_snb to roles: [role1, admin].
GSQL > SHOW ACL PRIVILEGE ON ROLE role1, admin
Role: "role1"
- QUERY:
 - EXECUTE:
  - Graph 'G1': [q1]
Role: "admin"
- QUERY:
 - EXECUTE:
  - Graph 'G1': [q1]
GSQL > GRANT ROLE role1 ON GRAPH G1 TO user1
GSQL > SHOW ACL PRIVILEGE ON USER user1
User: "user1"
- QUERY:
 - EXECUTE:
  - Graph 'G1': [q1]
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

If someone logs in as user `user2`, who doesn’t have the roles `role1` or `admin`, and tries to run the query, their request is denied.
```
GSQL > INTERPRET QUERY q1()
User 'user2' does not have the permission to run the command. Required ACL privilege EXECUTE on the query q1.
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

Log back in as the owner of the query, you can set ACL entries in the query to status `unspecified`. This disables ACL access control and revert access control to RBAC.
```
GSQL > REVOKE ACL PRIVILEGE EXECUTE ON QUERY q1 FROM ALL SECURED BY XXXXXX
GSQL > SHOW ACL PRIVILEGE ON USER user1
User: "user1"
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

## [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_how_permissions_are_evaluated)How permissions are evaluated
All operations that don’t involve queries are only governed by RBAC. ACLs only apply to queries.
When it comes to evaluating permissions for operations on queries, ACLs are evaluated first:
  * When an ACL is _unspecified_ , RBAC governs the access of the resource. By default, both ACLs (`READ` and `EXECUTE`) for a query are _unspecified_.
  * If the ACL entry is specified, ACL replaces RBAC to govern access for the query.
    * Even if a user does not have the `READ_QUERY` permission on a graph, they can read a query if they are on the `READ` list of the query.
    * Even if a user has the `READ_QUERY` permission on a graph, they cannot read a query if the `READ` list for the query is specified and the user is not on the list.


![Visualization of the hierarchy of permission evaluation for a query evaluation.](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/_images/acl-query-flow.png)
Figure 1. How permission is evaluated for a query operation
## [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_importing_and_exporting)Importing and exporting
When [exporting graphs](https://docs.tigergraph.com/tigergraph-server/3.6/import-export/database-import-export), ACLs are only exported when both queries and users are exported.
  * When you export graphs without queries, there is no ACL on the exported graphs because there are no queries.
  * When you export graphs with queries but without users, the ACL entries on the exported are reset to the _unspecified_ status.


3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


